IMPALA-316 Fix race in disk io mgr queue size accessor.